--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,7 @@ services:
 
   chris_db:
     image: mysql:5
-    environment:
-      - MYSQL_ROOT_PASSWORD=rootp
-      - MYSQL_DATABASE=chris
-      - MYSQL_USER=chris
-      - MYSQL_PASSWORD=Chris1234
+    env_file: secrets.env
     networks:
       - local
 
