--- a/secrets.env
+++ b/secrets.env
@@ -14,7 +14,7 @@ MYSQL_USER=chris
 MYSQL_PASSWORD=Chris1234
 CHRIS_STORE_URL=http://chrisstore.local:8010/api/v1/
 SWIFT_CONTAINER_NAME=users
-SWIFT_AUTH_URL=http://swift_service:8080/auth/v1.0
+SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
 SWIFT_USERNAME=chris:chris1234
 SWIFT_KEY=testing
 CELERY_BROKER_URL=amqp://queue:5672
