Mount storeBase inside pman
pman expects to find the folder as an assertion, else there's a 20
second delay before the job is executed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,6 +155,7 @@ services:
     command: ["--rawmode", "1", "--http", "--port", "5010", "--listeners", "12", "--verbosity", "1"]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - remote:/hostFS/storeBase
       - ./entrypoints/pman.sh:/entrypoint.sh:ro
     ports:
       - "127.0.0.1:5010:5010"
