--- a/secrets.env
+++ b/secrets.env
@@ -13,6 +13,7 @@ MYSQL_DATABASE=chris
 MYSQL_USER=chris
 MYSQL_PASSWORD=Chris1234
 CHRIS_STORE_URL=http://chrisstore.local:8010/api/v1/
+CHRIS_JID_PREFIX=chris-jid-
 SWIFT_CONTAINER_NAME=users
 SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
 SWIFT_USERNAME=chris:chris1234
