--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,24 @@
 # an ephemeral instance of ChRIS backend services for local development
 #
 # warning: /var/run/docker.sock is mounted into some services (notably pman)
-#
-# CUBE configuration based on
-# https://raw.githubusercontent.com/FNNDSC/ChRIS_ultron_backEnd/master/docker-compose.yml
-# commit 0ed91d7c3b3feaf9d68348623649a5d2e9918e34
 
 version: '3.7'
 
 services:
   chris:
     container_name: chris
-    image: fnndsc/chris:1.1.0
+    image: fnndsc/chris:2.0.0-rc.1
     ports:
       - "127.0.0.1:8000:8000"
     depends_on:
       - chris_db
       - swift
       - queue
-      - chris_store
-      - pfcon
     networks:
       - local
     env_file: secrets.env
   worker:
-    image: fnndsc/chris:1.1.0
+    image: fnndsc/chris:2.0.0-rc.1
     entrypoint: ''
     command: celery -A core worker -c 4 -l info -Q main
     env_file: secrets.env
@@ -37,7 +31,7 @@ services:
     networks:
       - local
   scheduler:
-    image: fnndsc/chris:1.1.0
+    image: fnndsc/chris:2.0.0-rc.1
     entrypoint: ''
     command: celery -A core beat -l info --pidfile /home/localuser/celerybeat.pid --scheduler django_celery_beat.schedulers:DatabaseScheduler
     env_file: secrets.env
@@ -66,7 +60,7 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=config.settings.production
       - DJANGO_ALLOWED_HOSTS=*
-      - DJANGO_SECRET_KEY="alsonotverysecure"
+      - DJANGO_SECRET_KEY=secret
       - DJANGO_CORS_ORIGIN_ALLOW_ALL=true
       - DJANGO_CORS_ORIGIN_WHITELIST=babymri.org
       - DJANGO_SECURE_PROXY_SSL_HEADER=
@@ -82,7 +76,7 @@ services:
       - SWIFT_KEY=testing
       - SWIFT_CONTAINER_NAME=store_users
     ports:
-      - "8010:8010"
+      - "127.0.0.1:8010:8010"
     depends_on:
       - chris_store_db
       - swift
@@ -102,8 +96,6 @@ services:
     labels:
       name: "ChRIS_store MySQL Database"
 
-  # swift, pfioh, and pman have hard-coded names inside pfcon by default
-  # so network aliases are set to be swift_service, pfioh_service, pman_service
   swift:
     image: fnndsc/docker-swift-onlyone:latest
     init: true
@@ -113,23 +105,26 @@ services:
     ports:
       - "127.0.0.1:8080:8080"
     networks:
-      local:
-        aliases:
-          - swift_service
+      - local
 
   pfcon:
     container_name: pfcon
-    image: fnndsc/pfcon:2.4.0
+    image: fnndsc/pfcon:3.0.0.0-rc.1
+    environment:
+      COMPUTE_SERVICE_URL: http://pman:5010/api/v1/
+      DATA_SERVICE_URL: http://pfioh:5055/api/v1/cmd
+      SECRET_KEY: secret
     ports:
       - "127.0.0.1:5005:5005"
     depends_on:
-      - swift
       - pman
       - pfioh
     networks:
       local:
         aliases:
           - pfcon.local
+      remote:
+
   pfioh:
     container_name: pfioh
     image: fnndsc/pfioh:3.0.2
@@ -139,26 +134,23 @@ services:
     ports:
       - "127.0.0.1:5055:5055"
     networks:
-      local:
-        aliases:
-          - pfioh_service
+      - remote
 
   pman:
-    image: fnndsc/pman:2.2.2
+    image: fnndsc/pman:3.1.0-rc.1
     container_name: pman
     environment:
-      - PMAN_DOCKER_VOLUME=pfioh-remote
+      PMAN_DOCKER_VOLUME: chris-minimake-pfioh-remote
+      CONTAINER_ENV: swarm
+      SECRET_KEY: secret
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - pfioh-remote:/hostFS/storeBase
     depends_on:
       - swarm-status
     ports:
       - "127.0.0.1:5010:5010"
     networks:
-      local:
-        aliases:
-          - pman_service
+      - remote
 
   chris_ui:
     image: fnndsc/chris_ui:latest
@@ -218,7 +210,8 @@ services:
 
 networks:
   local:
+  remote:
 
 volumes:
   pfioh-remote:
-    name: pfioh-remote
+    name: chris-minimake-pfioh-remote
