--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimake",
+  "name": "minichris",
   "version": "1.0.0",
   "description": "Github action for ChRIS backend services",
   "author": "FNNDSC <dev@babyMRI.org>",
@@ -7,10 +7,10 @@
   "main": "wrapper.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FNNDSC/minimake.git"
+    "url": "git+https://github.com/FNNDSC/miniChRIS.git"
   },
-  "homepage": "https://github.com/FNNDSC/minimake#readme",
+  "homepage": "https://github.com/FNNDSC/miniChRIS#readme",
   "bugs": {
-    "url": "https://github.com/FNNDSC/minimake/issues"
+    "url": "https://github.com/FNNDSC/miniChRIS/issues"
   }
 }
