--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ version: '3.7'
 services:
   chris:
     container_name: chris
-    image: fnndsc/chris:2.1.1-rc.2
+    image: fnndsc/chris:2.1.1-rc.3
     ports:
       - "8000:8000"
     depends_on:
@@ -21,7 +21,7 @@ services:
       DJANGO_DB_MIGRATE: "on"
       DJANGO_COLLECTSTATIC: "on"
   worker:
-    image: fnndsc/chris:2.1.1-rc.2
+    image: fnndsc/chris:2.1.1-rc.3
     command: celery -A core worker -c 4 -l info -Q main1,main2
     env_file: secrets.env
     environment:
@@ -36,7 +36,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: fnndsc/chris:2.1.1-rc.2
+    image: fnndsc/chris:2.1.1-rc.3
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
@@ -49,7 +49,7 @@ services:
     networks:
       - local
   scheduler:
-    image: fnndsc/chris:2.1.1-rc.2
+    image: fnndsc/chris:2.1.1-rc.3
     command: celery -A core beat -l info --pidfile /home/localuser/celerybeat.pid --scheduler django_celery_beat.schedulers:DatabaseScheduler
     env_file: secrets.env
     environment:
@@ -171,11 +171,17 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: fnndsc/chris_ui:1.4.0
+    image: fnndsc/chris_ui:1.4.1
+    command: sirv --quiet --single
+    environment:
+      REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
     ports:
       - "8020:3000"
   chris_store_ui:
-    image: fnndsc/chris_store_ui:0.1-rc.3
+    image: fnndsc/chris_store_ui:0.2.0-rc.1
+    command: sirv --quiet --single
+    environment:
+      REACT_APP_STORE_URL: http://localhost:8010/api/v1/
     ports:
       - "8021:3000"
 
