--- a/secrets.env
+++ b/secrets.env
@@ -7,11 +7,10 @@ DJANGO_SECURE_PROXY_SSL_HEADER=
 DJANGO_USE_X_FORWARDED_HOST=false
 STATIC_ROOT=/home/localuser/mod_wsgi-0.0.0.0:8000/htdocs/static/
 DATABASE_HOST=chris_db
-DATABASE_PORT=3306
-MYSQL_ROOT_PASSWORD=rootp
-MYSQL_DATABASE=chris
-MYSQL_USER=chris
-MYSQL_PASSWORD=Chris1234
+DATABASE_PORT=5432
+POSTGRES_DB=chris
+POSTGRES_USER=chris
+POSTGRES_PASSWORD=chirs1234
 CHRIS_STORE_URL=http://chrisstore.local:8010/api/v1/
 SWIFT_CONTAINER_NAME=users
 SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
