--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,7 +173,7 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: docker.io/fnndsc/chris_ui:1.4.6
+    image: ghcr.io/fnndsc/chris_ui:3.0.8
     command: sirv --quiet --single
     environment:
       REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
