--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -188,7 +188,7 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: ghcr.io/fnndsc/chris_ui:3.0.8
+    image: ghcr.io/fnndsc/chris_ui:20220304
     command: sirv --quiet --single
     environment:
       REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
