Switch to next branches: cmd is list[str]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - chris
   chris:
     container_name: chris
-    image: ghcr.io/fnndsc/chris:3.0.0.pre5
+    image: fnndsc/cube:next-3.0.0.a1.git.ad085cf
     ports:
       - "8000:8000"
     depends_on:
@@ -36,7 +36,7 @@ services:
       org.chrisproject.role: "ChRIS ultron backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: ghcr.io/fnndsc/chris:3.0.0.pre5
+    image: fnndsc/cube:next-3.0.0.a1.git.ad085cf
     command: celery -A core worker -c 4 -l info -Q main1,main2
     env_file: secrets.env
     environment:
@@ -51,7 +51,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: ghcr.io/fnndsc/chris:3.0.0.pre5
+    image: fnndsc/cube:next-3.0.0.a1.git.ad085cf
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
@@ -64,7 +64,7 @@ services:
     networks:
       - local
   scheduler:
-    image: ghcr.io/fnndsc/chris:3.0.0.pre5
+    image: fnndsc/cube:next-3.0.0.a1.git.ad085cf
     command: celery -A core beat -l info --pidfile /home/localuser/celerybeat.pid --scheduler django_celery_beat.schedulers:DatabaseScheduler
     env_file: secrets.env
     environment:
@@ -148,7 +148,7 @@ services:
 
   pfcon:
     container_name: pfcon
-    image: ghcr.io/fnndsc/pfcon:4.0.2
+    image: fnndsc/pfcon:next-5.0.0.a1.git.6822e96
     environment:
       COMPUTE_SERVICE_URL: http://pman:5010/api/v1/
       SECRET_KEY: secret
@@ -167,7 +167,7 @@ services:
       org.chrisproject.role: "pfcon"
 
   pman:
-    image: ghcr.io/fnndsc/pman:3.5.4
+    image: fnndsc/pman:next-4.0.0.a1.git.c245243
     container_name: pman
     environment:
       CONTAINER_ENV: swarm
